# templates

./: .gitignore
python/python-docker-template/: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile.dev  Dockerfile.poetry  Dockerfile.prod  Makefile  README.md  compose.dev.yml  package-lock.json  pyproject.toml
python/python-docker-template/.github/workflows/: py-ci.yml
python/python-docker-template/src/: main.py
python/python-docker-template/src/config/: __init__.py  settings.toml.sample
python/python-docker-template/src/utils/: bark.py  db.py
python/python-docker-template/tests/: test_bark.py
python/simple-python-template/: Makefile  main.py  pyproject.toml
