[tool.poetry]
name = "spy"
version = "0.1.0"
description = ""
authors = ["troublesis <bamboo5320@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"
dynaconf = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
